# PassiveAgent

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml.example  design.md  pyproject.toml  raw_requirement.md  technical_plan.md
config/: goals.yaml.example  scoring.yaml.example  sources.yaml  sources.yaml.example
docs/: configuration.md  development.md  feishu.md  scheduled-tasks.md  troubleshooting.md
prompts/: interview_card.md.j2  score.md.j2  summarize.md.j2  tech_note.md.j2
scripts/: com.passive-agent.daily.plist  com.passive-agent.serve.plist  com.passive-agent.weekend.plist  install_launchd.sh
src/passive_agent/: __init__.py  main.py  pipeline.py
src/passive_agent/actions/: base.py  ignore.py  interview_card.py  link_notes.py  mark_read.py  mute_similar.py  tech_note.py
src/passive_agent/collectors/: base.py  github_stars.py  hf_daily.py  obsidian.py  zotero.py
src/passive_agent/feishu/: bot.py  callbacks.py  cards.py  commands.py
src/passive_agent/integrations/: deepseek.py  llm_client.py  obsidian_writer.py  zotero_writeback.py
src/passive_agent/utils/: config.py  (+1 more)
stages/: stage1_foundation.md  stage2_collectors.md  stage3_llm_processing.md  stage4_actions.md
tests/: conftest.py  test_cli_dashboard.py  test_config.py  test_database.py  test_feishu_callbacks.py  test_feishu_commands.py  test_launchd_installer.py  test_llm_provider.py  test_obsidian_writer.py  test_pipeline.py  test_zotero_writeback.py
tests/test_collectors/: test_hf_daily.py  test_obsidian.py
tests/test_processors/: test_deduplicator.py  test_zotero_metadata.py
(+8 files in other folders)
