[project]
name = "passive-agent"
version = "0.1.0"
description = "注意力调度系统：从信息池中筛选高价值内容，推荐并沉淀为可复用知识"
readme = "README.md"
authors = [
    { name = "Jack Zhu", email = "zhuyijie151@sina.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.1",
    "jinja2>=3.1",
    "lark-oapi>=1.6.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "rich>=13.7",
]

[project.scripts]
passive-agent = "passive_agent.main:cli"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
